# forge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: RUNBOOK-work-install.md  config.example.toml  error-surface-audit.md
docs/work/: litellm-work.yaml
forge/: __init__.py  cli.py  mcp_server.py  registry.py
forge/book_researcher/: README.md  config.py  main.py  models.py  planner.py  renderer.py  researcher.py  run.sh  scaffold.py  verifier.py
forge/code_audit_ensemble/: audit.py  config.py  emit.py  main.py  models.py  prompts.py  run.sh
forge/code_reviewer/: ai.py  config.py  main.py  models.py  renderer.py  run.sh  writer.py
forge/coding_pipeline/: README.md  architect.py  config.py  context.py  dispatch.py  emit.py  inventory.py  journal.py  journal_mirror.py  main.py  models.py  orchestrator.py  provenance.py  reconcile.py  scheduling.py  vcs_epic.py  verify.py  waves.py
forge/dependabot/: README.md  audit.py  autobump.py  bump.py  config.py  dependabot-bumper.service  dependabot-bumper.timer  emit.py  main.py  models.py  policy.py  prompts.py  reachability.py  redundancy.py  release.py  run.sh  scan.py  supply_chain.py
forge/evals/: README.md  config.py  fixtures.py  main.py  models.py  report.py  runner.py  steps.py
forge/general_researcher/: README.md  config.py  main.py  models.py  planner.py  renderer.py  researcher.py  run.sh  synthesizer.py  verifier.py
forge/grind/: __init__.py  config.py  executor.py  jj.py  loop.py  main.py  models.py  prompt.py  runbook.py  scaffold.py
forge/parallel_edit/: config.py  judge.py  logger.py  (+7 more)
(+439 files in other folders)
