[project]
name = "forge"
version = "0.1.0"
description = "Front door for the erewhon code agents: CLI and MCP server"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "mcp>=1.25.0",
]

[project.optional-dependencies]
nous = ["nous-ai"]

[project.scripts]
forge = "forge.cli:main"
forge-mcp = "forge.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.uv.sources]
nous-ai = { path = "../nous/nous-py", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["forge"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.21",
]
